--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "foodvilla",
+  "homepage": "https://Anurakti.github.io/foodvilla",
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "parcel index.html",
     "build": "parcel build index.html",
     "test": "jest"
@@ -18,6 +21,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
