--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "parcel index.html",
-    "build": "parcel build index.html",
+    "build": "parcel build index.html --public-url /foodvilla",
     "test": "jest"
   },
   "keywords": [],
